--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -137,6 +137,8 @@
     "SoloConstructTypePage.instruction": "Вы создаете персонажа или звездолет?",
     "SoloConstructTypePage.starship": "Звездолет",
 
+    "SoloEarlyOutlookPage.upbringings": "Воспитание",
+
     "SoloEarlyOutlookDetailsPage.errorDiscipline": "Пожалуйста выберите Знание",
     "SoloEarlyOutlookDetailsPage.errorFocus": "Пожалуйста выберите Специализацию",
 
@@ -324,6 +326,7 @@
     "Page.title.careerLength": "Продолжительность карьеры",
     "Page.title.careerLengthDetails": "Подробности продолжительности карьеры",
     "Page.title.characterType": "Тип персонажа",
+    "Page.title.customSpeciesDetails": "Детали расы",
     "Page.title.education": "Обучение",
     "Page.title.educationDetails": "Детали обучения",
     "Page.title.environment": "Среда обитания",
@@ -359,40 +362,58 @@
     "CareerEvent.common.2.description": "Во время выполнения важной миссии один из друзей персонажа был убит в бою.\n\n- Кем был этот друг? Как он познакомился с персонажем?\n- В чём была миссия? Как умер друг? Кто виноват?",
 
     "CareerEvent.common.3.name": "Благодарность от другой цивилизации",
+    "CareerEvent.common.3.description": "Персонаж участвовал в миссии, которая заслужила официальную благодарность цивилизации, не входящей в состав Федерации, и теперь считается другом этого народа. Кому помогла эта миссия? В чём она заключалась?\n\n- Почему миссия заслужила особую похвалу?\n- Есть ли у этого персонажа друзья или знакомые среди этой цивилизации, к которым можно обратиться за по-\nМощью?",
 
     "CareerEvent.common.4.name": "Заключение договора",
+    "CareerEvent.common.4.description": "Персонаж входил в делегацию, которая помогла провести переговоры о заключении перемирия, соглашения или альянса с цивилизацией, не входящей в Федерацию. \n\n- С кем был заключён договор? Какова цель договора?",
 
     "CareerEvent.common.5.name": "Принятие командования",
+    "CareerEvent.common.5.description": "Из-за кризиса во время миссии лидер не смог ею руководить. От персонажа потребовалось принять командование на себя, к чему он, возможно, не был готов. \n\n- В чём заключалась миссия? Что пошло не так?\n- Была ли миссия успешной несмотря на потерю\nлидера?",
 
     "CareerEvent.common.6.name": "Встреча с по-настоящему чуждым существом",
+    "CareerEvent.common.6.description": "Персонаж столкнулся с по-настоящему иной формой жизни, которая не укладывается в рамки представлений о гуманоидной жизни. Это может быть богоподобное создание или дрейфующее по космосу существо, но в любом случае это представитель незнакомой нам формы жизни. \n\n- Что это за существо? Чему персонаж научился благодаря\nэтой встречи?\n- Что случилось с существом после? Его видели снова?",
 
     "CareerEvent.common.7.name": "Серьезная травма",
+    "CareerEvent.common.7.description": "Персонаж был серьёзно ранен и долго восстанавливался. \n- При каких обстоятельствах персонаж был ранен? Кто в этом виноват?\n- Какие последствия восстановления? Потребовался\nли персонажу обычный или кибернетический протез?",
 
     "CareerEvent.common.8.name": "Конфликт с враждебной цивилизацией",
+    "CareerEvent.common.8.description": "Персонаж участвовал в серьёзной битве с враждебной силой и вряд ли забудет об этом. \n\n- Кем был враг? По какой причине произошло сраже-\nние? Это сражение велось в космосе, на планете или и там, и там?\n- Что должен был предпринять ПИ для выживания?Битва окончилась победой или поражением?",
 
     "CareerEvent.common.9.name": "Обучение у наставника",
+    "CareerEvent.common.9.description": "Уважаемый офицер присматривал за персонажем. Какое-то время персонаж служил пилотом под его началом и исполнял обязанности его помощника, получая ценные знания и опыт. \n\n- Кем был этот офицер? Поддерживает ли он отношения с персонажем или, может, даже стал ему другом?",
 
     "CareerEvent.common.10.name": "Авария на транспортере",
+    "CareerEvent.common.10.description": "Персонаж пострадал в результате какого-то необычного инцидента на транспóртере. \n\n- Что случилось с ПИ во время аварии? Были ли какие-то продолжительные последствия?\n- Как ПИ сейчас относится к транспóртерам?",
 
     "CareerEvent.common.11.name": "Борьба с эпидемией",
+    "CareerEvent.common.11.description": "Звездолёт персонаж был направлен для оказания помощи\nКакому-то народу в борьбе с эпидемией. \n\n- Что за болезнь свирепствовала? Какая планета по-\nСтрадала? \n- Персонаж имел дело непосредственно с больными? В чём заключались его задачи?",
 
     "CareerEvent.common.12.name": "Предательство идеалов ради начальства",
+    "CareerEvent.common.12.description": "Персонаж оказался в ситуации, когда был вынужден выбирать между своими идеалами и приказом командира, которому доверял, и решил подчиниться приказу. \n\n- Кем был командир? Что он попросил сделать? \n- Как персонаж чувствует себя сейчас?\nКаковы были последствия этого поступка? Есть ли записи случившегося? Был ли персонаж прав?",
 
     "CareerEvent.common.13.name": "Пеподчинение старшему по званию",
+    "CareerEvent.common.13.description": "Персонаж оказался в ситуации, когда был вынужден выбирать между своими идеалами и приказом командира, которому он доверял, и решил следовать идеалам. \n\n- Кем был командир? Что он просил сделать? Как персонаж чувствует себя сейчас?\n- Каковы были последствия этого поступка? Есть ли записи случившегося? Был ли персонаж прав?",
 
     "CareerEvent.common.14.name": "Новая стратегия боя",
+    "CareerEvent.common.14.description": "В бою с врагами персонаж смог придумать новую стратегию или тактику. \n\n- Против кого вёлся бой? Бой шёл в космосе или на планете?\n- Что это была за стратегия?",
 
     "CareerEvent.common.15.name": "Изучение уникального языка",
+    "CareerEvent.common.15.description": "Персонаж встретил вид с необычной формой общения и научился с ним общаться. \n\n- С какими инопланетянами встретился ПИ? Встреча была мирной или напряжённой?\n- Какой метод общения используют чужаки? Как персонаж научился ему?",
 
     "CareerEvent.common.16.name": "Обнаружение артефакта",
+    "CareerEvent.common.16.description": "Во время исследовательской миссии персонаж обнаружил устройство или артефакт, относящийся к технологии ныне исчезнувшей цивилизации.\n\n- Для чего предназначалась эта технология? Действует\nли артефакт до сих пор?\n- Что известно о цивилизации, которая его создала?",
 
     "CareerEvent.common.17.name": "Особая благодарность",
+    "CareerEvent.common.17.description": "В кризисной ситуации персонаж спас жизнь нескольким коллегам и помог им добраться в безопасное место. За это он был удостоен особой благодарности.\n\n- Что это была за ситуация? Почему люди были в опасности?\n- Каковы были последствия случившегося? Есть ли записи случившегося?",
 
     "CareerEvent.common.18.name": "Решение инженерной проблемы",
+    "CareerEvent.common.18.description": "Персонаж сыграл важную роль в преодолении кризисной ситуации, вызванной неисправностью, и спас благодаря этому множество жизней.\n\n- Какая техника неисправна, и почему это было опасно?\n- Как персонаж решил проблему?",
 
-    "CareerEvent.common.19.name": "Открытие или изобретение",
+    "CareerEvent.common.19.name": "Прорыв или изобретение",
+    "CareerEvent.common.19.description": "Персонаж сделал важное техническое открытие, придумал необычный способ использования существующей технологии или изобрёл какую-то новую технологию, которая станет бесценной.\n\n- Что это было за открытие - прорыв или изобретение? Какую пользу оно несёт?",
 
     "CareerEvent.common.20.name": "Первый контакт",
+    "CareerEvent.common.20.description": "Персонаж был выбран для участия в одной из самых важных миссий Звёздного флота: установление первого контакта с другой цивилизацией. \n\n- С какой цивилизацией был установлен первый контакт? Прошла ли миссия успешно?",
 
     "CareerType.core.young.name": "Молодой офицер",
     "CareerType.core.young.description": "Персонаж обладает скорее потенциальными, чем конкретными навыками. Его пока неразвитые способности и представления о Вселенной не прошли испытания реальностью.",
@@ -600,9 +621,29 @@
 
     "Talent.boldSecurity.description": "Если при выполнении Задачи с применением Безопасности приобретается 1 бонусный d20 или больше, добавив ведущему жетон Угрозы, можно заново бросить 1 использованный для этой Задачи d20.",
 
-    "Talent.сautiousSecurity": "Предусмотрительный: Безопасность",
+    "Talent.cautiousCommand": "Предусмотрительный: Коммандование",
 
-    "Talent.сautiousSecurity.description": "Если при выполнении Задачи с применением этого Безопасности приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20",
+    "Talent.cautiousCommand.description": "Если привыполнении Задачи с применением этого Коммандования приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+
+    "Talent.cautiousConn": "Предусмотрительный: Навигация",
+
+    "Talent.cautiousConn.description": "Если привыполнении Задачи с применением этого Навигации приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+
+    "Talent.cautiousEngineering": "Предусмотрительный: Инженерия",
+
+    "Talent.cautiousEngineering.description": "Если привыполнении Задачи с применением этого Инженерии приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+
+    "Talent.cautiousMedicine": "Предусмотрительный: Медицина",
+
+    "Talent.cautiousMedicine.description": "Если привыполнении Задачи с применением этого Медицины приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+
+    "Talent.cautiousScience": "Предусмотрительный: Наука",
+
+    "Talent.cautiousScience.description": "Если привыполнении Задачи с применением этого Науки приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
+
+    "Talent.cautiousSecurity": "Предусмотрительный: Безопасность",
+
+    "Talent.cautiousSecurity.description": "Если привыполнении Задачи с применением этого Безопасности приобретается 1 бонусный d20 или больше, за жетон Импульса можно заново бросить 1 использованный для этой Задачи d20.",
 
     "Talent.collaborationCommand": "Сотрудничество: Коммандование",
 
