--- a/WebTools/src/i18n/locales/ru/translations.json
+++ b/WebTools/src/i18n/locales/ru/translations.json
@@ -681,6 +681,10 @@
 
     "Talent.dauntless.description": "Выполняя Задачу по сопротивлению запугиванию или угрозе, можно взять бонусный d20.",
 
+    "Talent.defuseTheTension": "Умеет снизить напряжение",
+
+    "Talent.defuseTheTension.description": "Выполняя Задачу по убеждению кого-то не применять насилие, возьмите для броска бонусный d20.",
+
     "Talent.empath": "Эмпат",
 
     "Talent.empath.description": "Можно дать только при создании ПИ. Вы можете чувствовать эмоции большинства живых существ, находящихся поблизости, и способны телепатически общаться с другими эмпатами и телепатами, а также с теми, с кем очень близко знакомы. Вы не можете не чувствовать эмоции тех, кто поблизости, если только они не сопротивляются телепатии. Чтобы распознать эмоции конкретного индивида в толпе или закрыться от эмоций тех, кто поблизости, нужно приложить усилие и выполнить Задачу. Повысьте сложность этой Задачи, если ситуация стрессовая, если вокруг вас много существ; если цель имеет сопротивление телепатии или действуют подобные факторы.",
@@ -688,6 +692,10 @@
     "Talent.fieldMedicine": "Полевая медицина",
 
     "Talent.fieldMedicine.description": "Выполняя Задачу на Медицину, игнорируйте любое увеличение сложности за работу без нужных инструментов или оборудования.",
+
+    "Talent.flyBy": "Облет",
+
+    "Talent.flyBy.description": "При использовании вами запаса Импульса для выполнения Дополнительной Задачи, сложность Дополнительной Задачи не увеличивается, если одна из выполняемых Задач «Управление кораблём или транспортным средством».",
 
     "Talent.followMyLead": "За мной!",
 
